objects/CS103_3C_ObjectListColumns__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom settings define the fields displayed for the ObjectList</description>
    <fields>
        <fullName>FieldApiName__c</fullName>
        <description>Api name of the field</description>
        <label>FieldApiName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <description>Name of the field</description>
        <inlineHelpText>This the column name displayed</inlineHelpText>
        <label>FieldName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListName__c</fullName>
        <description>Name of the list used with this custom setting</description>
        <label>ListName</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Display order</description>
        <inlineHelpText>Display order</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profiles__c</fullName>
        <description>Liste of profiles who are associated to this custom setting</description>
        <inlineHelpText>Profiles names separated by semi colons</inlineHelpText>
        <label>Profiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Users__c</fullName>
        <description>List of users associated with this custom setting</description>
        <inlineHelpText>User names separated by semi colons</inlineHelpText>
        <label>Users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you check this field please dont check isImage and isRadioButton</description>
        <inlineHelpText>If you check this field please dont check isImage and isRadioButton</inlineHelpText>
        <label>isCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isImage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if the filed is an image</description>
        <inlineHelpText>If you check this field, please dont check isCheckbox and isRadioButton</inlineHelpText>
        <label>isImage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRadioButton__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you check this field please dont check isImage and isCheckbox</description>
        <inlineHelpText>If you check this field please dont check isImage and isCheckbox</inlineHelpText>
        <label>isRadioButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSortable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Uncheck this field if you dont want this column to be sortable (example: custom column for a checkbox)</description>
        <inlineHelpText>Uncheck this field if you dont want this column to be sortable (example: custom column for a checkbox)</inlineHelpText>
        <label>isSortable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sObjectName__c</fullName>
        <description>sObjectName</description>
        <label>sObjectName</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CS103_3C_ObjectListColumns</label>
</CustomObject>